@@ -65,6 +65,7 @@ typedef struct tape_s {
     gboolean   retention;	/* use internally */
     gboolean   retention_nb;	/* use internally */
     RetentionType retention_type;
+    int when_overwrite;		/* for planner    */
 } tape_t;
 
 void compute_retention(void);
@@ -109,5 +110,6 @@ int volume_is_reusable(const char *label);
 int guess_runs_from_tapelist(void);
 gchar **list_new_tapes(char *storage_n, int nb);
 RetentionType get_retention_type(char *pool, char *label);
+int tape_overwrite(tape_t *tp);
 
 #endif /* !TAPEFILE_H */
